Fix vertical spacing between tiles

--- a/css/content-page.scss
+++ b/css/content-page.scss
@@ -96,6 +96,10 @@
       display: flex;
       position: relative;
 
+      a {
+        display: flex;
+      }
+
       img {
         width: 100%;
       }
